--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+<<head>
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="images/favicon.png">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <h1>Hey Nack</h1>
+  <p>I'm just getting this all set up.</p>
 </body>
 </html>
