--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/favicon.png">
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>J Balfe</title>
+
 </head>
 
 <body>
