--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-  <h1>Hey Nack</h1>
-  <p>I'm just getting this all set up.</p>
+  <h1>Hey there.</h1>
+  <p>You're not meant to be here yet.</p>
+  <p>Contact <b>admin@jbalfe.com</b> for more information :) </p>
 </body>
 </html>
