--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <h1>Hey there.</h1>
   <p>You're not meant to be here yet.</p>
   <p>Contact <b>admin@jbalfe.com</b> for more information :) </p>
+  <li><a href="contact.html">Contact Form</a></li>
 </body>
 </html>
