--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,10 @@
 
             <div class="col-xl-8 offset-xl-2 py-5">
 
-                <h1>Contact form Tutorial from
-                    <a href="http://bootstrapious.com">Bootstrapious.com</a>
+                <h1>Contact Me!
                 </h1>
 
-                <p class="lead">This is a demo for our tutorial dedicated to crafting working Bootstrap contact form with PHP and AJAX background.</p>
+                  <p class="lead">Please provide as much detail as possible in your message so I can see what will work best for you.</p>
 
 
                 <form id="contact-form" method="post" action="contact.php" role="form">
@@ -86,8 +85,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="text-muted">
-                                    <strong>*</strong> These fields are required. Contact form template by
-                                    <a href="https://bootstrapious.com/p/how-to-build-a-working-bootstrap-contact-form" target="_blank">Bootstrapious</a>.</p>
+                                    <strong>*</strong> These fields are required</p>
                             </div>
                         </div>
                     </div>
