--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <input type="submit" class="btn btn-success btn-send" value="Send message">
+                                <button type="submit" class="btn btn-success btn-send" value="Send message">
                             </div>
                         </div>
                         <div class="row">
