Switch mail source

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                   <p class="lead">Please provide as much detail as possible in your message so I can see what will work best for you.</p>
 
 
-                <form id="contact-form" method="post" action="https://formspree.io/email@domain.tld" role="form">
+                <form id="contact-form" method="post" action="https://formspree.io/admin@jbalfe.com" role="form">
 
                     <div class="messages"></div>
 
