--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
 
             <div class="col-xl-8 offset-xl-2 py-5">
 
-              <form action="https://formspree.io/admin@jbalfe.com">
-              <input type="text" name="name">
-              <input type="email" name="_replyto">
-              <input type="submit" value="Send">
+              <form method="post" action="https://formspree.io/admin@jbalfe.com">
+              <input type="text" name="name" placeholder="Name">
+              <input type="email" name="_replyto" placeholder="Email">
+              <input type="submit" value="Send" placeholder="Send">
               </form>
 
                 <h1>Contact Me!
