--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
               <input type="text" name="name" placeholder="Name">
               <input type="email" name="_replyto" placeholder="Email">
               <input type="submit" value="Send" placeholder="Send">
+              <input type="hidden" name="_next" value="//jbalfe.com/index.html" />
               </form>
 
                 <h1>Contact Me!
