--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,11 @@
 
             <div class="col-xl-8 offset-xl-2 py-5">
 
+              <div class="cognito">
+                <script src="https://services.cognitoforms.com/s/9zZKYadA8UqfHJvndcB-lQ"></script>
+                <script>Cognito.load("forms", { id: "1" });</script>
+              </div>
+
               <form method="post" action="https://formspree.io/admin@jbalfe.com">
               <input type="text" name="name" placeholder="Name">
               <input type="email" name="_replyto" placeholder="Email">
