--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,12 @@
                   <p class="lead">Please provide as much detail as possible in your message so I can see what will work best for you.</p>
 
 
-                <form id="contact-form" method="post" action="https://formspree.io/admin@jbalfe.com" role="form">
+                <form id="contact-form" method="post" action="https://i7n2hydt8e.execute-api.us-east-1.amazonaws.com/dev/email/send" role="form">
 
                     <div class="messages"></div>
 
+                    <div id="toast"></div>
+                    
                     <div class="controls">
 
                         <div class="row">
