--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                     <div class="messages"></div>
 
                     <div id="toast"></div>
-                    
+
                     <div class="controls">
 
                         <div class="row">
@@ -76,12 +76,12 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label for="form_message">Message *</label>
-                                    <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
+                                    <textarea id="form_message" name="content" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <input type="submit" class="btn btn-success btn-send" value="Send message">
+                                <input type="submit" class="btn btn-success btn-send" value="Send message" id="submit">
                             </div>
                         </div>
                         <div class="row">
