--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <input type="submit" class="btn btn-success btn-send" value="Send message" id="submit">
+                                <input type="submit" class="btn btn-success btn-send" value="Send message" id="submit"</input>
                             </div>
                         </div>
                         <div class="row">
