--- a/404.html
+++ b/404.html
@@ -1,3 +1,7 @@
+---
+permalink: /404.html
+---
+
 <!DOCTYPE html>
 <html>
 
@@ -24,7 +28,7 @@
 
 
 
-                
+
 
             </div>
             <!-- /.8 -->
