--- a/404.html
+++ b/404.html
@@ -18,6 +18,10 @@ permalink: /404.html
 
 <body>
 
+        <div class="box">
+              <img src="/images/error.png" class="d-block mx-auto" alt="Trixie">
+        </div>
+
     <div class="container">
 
         <div class="row">
