--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@ permalink: /404.html
 
                 <h1>Oops! Looks like you're a bit lost.</h1>
 
-
+                <img src="/images/error.png" class="d-block mx-auto" alt="Trixie">
 
 
 
