--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@ permalink: /404.html
 
             <div class="col-xl-8 offset-xl-2 py-5">
 
-                <h1>Oops! Looks like you're a bit lost.</h1>
+                <h1 class="text-center">Oops! Looks like you're a bit lost.</h1>
 
                 <img src="/images/error.png" class="img-fluid" alt="Trixie">
 
