--- a/404.html
+++ b/404.html
@@ -23,8 +23,8 @@ permalink: /404.html
         <div class="row">
 
             <div class="col-xl-8 offset-xl-2 py-5">
-
-                <h1 class="text-center">Oops! Looks like you're a bit lost.</h1>
+                <h1 class="text-center">404</h1>
+                <h2 class="text-center">Oops! Looks like you're a bit lost.</h2>
 
                 <img src="/images/error.png" class="img-fluid" alt="Trixie">
 
