--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,7 @@
 
             <div class="col-xl-8 offset-xl-2 py-5">
 
-                <h1>Contact Me!
-                </h1>
+                <h1>Get In Touch!</h1>
 
 
 
