--- a/index.html
+++ b/index.html
@@ -43,10 +43,21 @@
     </div>
   </nav>
 
+  <div class="container">
 
-  <h1>Hey there.</h1>
-  <p>You're not meant to be here yet.</p>
-  <p>Contact <b>admin@jbalfe.com</b> for more information :) </p>
+      <div class="row">
+
+          <div class="col-xl-8 offset-xl-2 py-5">
+
+            <h1>Hey there.</h1>
+            <p>You're not meant to be here yet.</p>
+            <p>Contact <b>admin@jbalfe.com</b> for more information :) </p>
+
+          </div>
+      </div>
+  </div>
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
