--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@ permalink: /404.html
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">J Balfe</a>
+      <a class="navbar-brand" href="#"><img src="images\logo.png" height="50" width="100" alt = "JBalfe" /> </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
