--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#">Contact
