--- a/services.html
+++ b/services.html
@@ -18,22 +18,22 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-            <a class="navbar-brand" href="#"><img src="images\logo.png" height="50" width="100" alt = "JBalfe" /> </a>
+      <a class="navbar-brand" href="#"><img src="images\logo.png" height="50" width="100" alt = "JBalfe" /> </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Services
+              <span class="sr-only">(current)</span>
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -49,15 +49,12 @@
 
           <div class="col-xl-8 offset-xl-2 py-5">
 
-            <h1>Hey there.</h1>
-            <p>You're not meant to be here yet.</p>
-            <p>Contact <b>admin@jbalfe.com</b> for more information :) </p>
+              <h1>Services.</h1>
+              <p> :) :) :) </p>
 
           </div>
       </div>
   </div>
-
-
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
