--- a/services.html
+++ b/services.html
@@ -50,7 +50,9 @@
           <div class="col-xl-8 offset-xl-2 py-5">
 
               <h1>Services.</h1>
-              <p> :) :) :) </p>
+              <p> Coming Soon(ish) </p>
+
+              <img src="/images/loading.gif" class="img-fluid" alt="Ping Pong">
 
           </div>
       </div>
