Temp loading image on index.html

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
             <h1>Hey there.</h1>
             <p>You're not meant to be here yet.</p>
+            <img src="/images/fourier.gif" class="img-fluid" alt="Fourier transform">
             <p>Contact <b>admin@jbalfe.com</b> for more information :) </p>
 
           </div>
